[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MARS"
version = "1.0.0"
description = "MARS: Meta-learning approach for cell type discovery in heterogeneous single-cell data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Maria Brbic", email = "mbrbic@cs.stanford.edu"},
]
keywords = ["single-cell", "machine-learning", "meta-learning", "bioinformatics", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "torch>=1.2.0",
    "numpy>=1.17.0", 
    "pandas>=0.25.0",
    "anndata>=0.6.22",
    "scanpy>=1.4.4",
    "scikit-learn>=0.19.2",
    "scipy>=1.3.1",
]

[project.urls]
Homepage = "http://snap.stanford.edu/mars"
Repository = "https://github.com/ning-y/mars"
Documentation = "https://github.com/ning-y/mars/blob/master/README.md"

[tool.setuptools]
packages = ["data", "model"]
py-modules = ["args_parser", "cross_tissue_generator", "evaluation", "main_TM"]
