[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MARS"
version = "1.0.0"
description = "MARS: Meta-learning approach for cell type discovery in heterogeneous single-cell data"
readme = "README.md"
requires-python = "== 3.8.*"
license = {text = "MIT"}
authors = [
    {name = "Maria Brbic", email = "mbrbic@cs.stanford.edu"},
]
keywords = ["single-cell", "machine-learning", "meta-learning", "bioinformatics", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "Cython == 0.29.14",
    "anndata == 0.8.0",
    "matplotlib < 3.7",
    "numpy >= 1.8.2, < 1.20",
    "pandas >= 0.25.0, < 2",
    "scanpy >= 1.4.4, < 1.6",
    "scikit-learn >= 0.19.2, < 0.24",
    "scipy >= 1.3.1",
    "torch >= 1.2.0",
]

[project.urls]
Homepage = "http://snap.stanford.edu/mars"
Repository = "https://github.com/snap-stanford/mars"
Documentation = "https://github.com/snap-stanford/mars/blob/master/README.md"

[tool.setuptools]
packages = ["data", "model"]
